# Jarvis-Voice-Assistant

./: .coderabbit.yaml  .env.example  .gitignore  .notes_tracker  CLAUDE.md  COMPLETE_SETUP_GUIDE.md  CONTEXT_MANAGER_GUIDE.md  DANIEL_NOTES.md  Dockerfile  HARDWARE_GUIDE.md  NOTES_SYSTEM.md  PERFORMANCE_AND_MODELS.md  PORCUPINE_SETUP.md  PYTHON311_SETUP.md  README.md  SMART_ROUTER_GUIDE.md  SOFTWARE_DESIGN_DOCUMENT.md  check-notes-auto.sh  codecov.yml  context_manager.py  docker-compose.personaplex.yml  docker-compose.yml  homeassistant_client.py  init_jarvis_context.py  jarvis_enroll.py  jarvis_full_opensource.py  jarvis_gemma4_router.py  jarvis_health.py  jarvis_homeassistant.py  jarvis_logging.py  jarvis_mic_test.py  jarvis_mic_test_pyaudio.py  jarvis_optimized.py  jarvis_orchestrator.py  jarvis_pipecat.py  jarvis_simple_wakeword.py  jarvis_smart_router.py  jarvis_speaker.py  jarvis_uncensored.py  jarvis_v2.py  (+28 more)
.github/workflows/: ci.yml
JarvisApp/: .gitignore  Package.swift
JarvisApp/Resources/: JarvisIcon.icns  generate-icon.sh
JarvisApp/Sources/: AppDelegate.swift  main.swift
JarvisApp/Sources/Core/: AudioPipeline.swift  HomeAssistantClient.swift  JarvisCore.swift  OrchestratorClient.swift  PersonaPlexClient.swift  VoiceForgeClient.swift
JarvisApp/Sources/Models/: ConversationMode.swift
JarvisApp/Sources/Services/: HotKeyManager.swift  ServerManager.swift
JarvisApp/Sources/Utils/: DesktopShortcut.swift  Logger.swift
JarvisApp/Sources/Views/: ConversationWindow.swift  StatusBarController.swift
config/: jarvis.yaml
docs/: FEATURE_ROADMAP.md  LOGGING.md  PERSONAPLEX_SETUP.md  RESEARCH_PROMPT.md  UPGRADE_PLAN.md
roadmap/: PHASE_1_CORE.md  PHASE_2_SMART_HOME.md  PHASE_3_MULTI_ROOM.md  PHASE_4_ADVANCED.md  PHASE_5_PERSONAPLEX.md
scripts/: install-desktop-icon.sh
tests/: __init__.py  conftest.py  test_context_manager.py
website/: index.html  package-lock.json  package.json
website/src/: App.css  App.jsx
